After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 738568 - videotestsrc: assertion failed error
videotestsrc: assertion failed error
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
unspecified
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-10-15 09:06 UTC by Vineeth
Modified: 2014-10-21 09:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
videotestsrc assertion error (3.05 KB, patch)
2014-10-15 09:09 UTC, Vineeth
needs-work Details | Review
videotestsrc assertion error (3.10 KB, patch)
2014-10-20 12:54 UTC, Vineeth
needs-work Details | Review
videotestsrc assertion error (2.01 KB, patch)
2014-10-21 09:16 UTC, Vineeth
committed Details | Review

Description Vineeth 2014-10-15 09:06:18 UTC
In Videotestsrc,
timestamp_offset is being declared as an int64 variable, for which the min value of G_MININT64 is -9223372036854775808,
if we launch videotestsrc with this value, 
"videotestsrc timestamp-offset=-9223372036854775808 ! ximagesink"
it gives an assertion error
GStreamer:ERROR:gstpoll.c:1242:gst_poll_wait: assertion failed: ("Value of time " "timeout" " is out of timespec's range" && ((timeout) / GST_SECOND) < G_MAXLONG)

Ideally timestamp_offset, should be of type GstClockTime, which is uint64.
Made the changes according to the same and adjusted the max value of timestamp_offset, based on the timespec's calculation.


Please review the fix.
Comment 1 Vineeth 2014-10-15 09:09:15 UTC
Created attachment 288569 [details] [review]
videotestsrc assertion error
Comment 2 Sebastian Dröge (slomo) 2014-10-20 10:21:59 UTC
Comment on attachment 288569 [details] [review]
videotestsrc assertion error

Same comments about the overflow here as in the aggregator patch
Comment 3 Vineeth 2014-10-20 12:54:13 UTC
Created attachment 288934 [details] [review]
videotestsrc assertion error
Comment 4 Sebastian Dröge (slomo) 2014-10-21 08:57:37 UTC
Review of attachment 288934 [details] [review]:

::: gst/videotestsrc/gstvideotestsrc.c
@@ +184,3 @@
           DEFAULT_PATTERN, G_PARAM_READWRITE | G_PARAM_STATIC_STRINGS));
   g_object_class_install_property (gobject_class, PROP_TIMESTAMP_OFFSET,
+      g_param_spec_uint64 ("timestamp-offset", "Timestamp offset",

Don't change the type of the property, that's an API change :)
Comment 5 Vineeth 2014-10-21 09:16:34 UTC
Created attachment 289009 [details] [review]
videotestsrc assertion error
Comment 6 Sebastian Dröge (slomo) 2014-10-21 09:28:40 UTC
commit c2224b805941bd77b57f24e7b86f0a5ba3113135
Author: Vineeth T M <vineeth.tm@samsung.com>
Date:   Tue Oct 21 14:43:30 2014 +0530

    videotestsrc: assertion error
    
    timestamp_offset is being declared as an int64 variable,
    for which the min
    value of G_MININT64 is -9223372036854775808
    Changing the minimum and maximum limit for the offset variable.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=738568